feat(web): add http interceptor to automatically add auth tokens to requests

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -2,5 +2,6 @@
 <button (click)="onRegister()">Register</button>
 @if (registrationResult$ | async) {
     <p>Register succesful</p>
+} @else {
+    <p>Register failed</p>
 }
-
