feat(web): add login and home page

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,7 +1,1 @@
-<h1>Triggo</h1>
-<button (click)="onRegister()">Register</button>
-@if (registrationResult$ | async) {
-    <p>Register succesful</p>
-} @else {
-    <p>Register failed</p>
-}
+<router-outlet></router-outlet>
