--- a/web/src/app/features/home/home.page.html
+++ b/web/src/app/features/home/home.page.html
@@ -1,2 +1,5 @@
-<p>home works!</p>
-<a href="/login">Login</a>
+<div>
+  <h2>User Last Name: {{ user()?.lastName }}</h2>
+</div>
+
+<button (click)="logout()">Logout</button>
