core(web): setup triggo-ui components library

--- a/web/src/app/features/home/home.page.html
+++ b/web/src/app/features/home/home.page.html
@@ -2,4 +2,4 @@
   <h2>User Last Name: {{ user()?.lastName }}</h2>
 </div>
 
-<button (click)="logout()">Logout</button>
+<button trBtn (click)="logout()">Logout</button>
