--- a/web/src/app/features/authentication/register/register.page.html
+++ b/web/src/app/features/authentication/register/register.page.html
@@ -1,5 +1,5 @@
 <h1>Triggo</h1>
-<button (click)="onRegister()">Register</button>
+<button trBtn (click)="onRegister()">Register</button>
 @if (registrationResult$ | async) {
 <p>Register succesful</p>
 }
