--- a/web/src/app/features/home/home.page.html
+++ b/web/src/app/features/home/home.page.html
@@ -2,4 +2,8 @@
   <h2>User Last Name: {{ user()?.lastName }}</h2>
 </div>
 
+<p>Hello World</p>
+<p style="font-family: Mada, sans-serif">Hello World (Mada Sans Serif)</p>
+<p style="font-family: Onest, sans-serif">Hello World (Onest Sans Serif)</p>
+
 <button trBtn (click)="logout()">Logout</button>
