feat(web): add colors scss file

--- a/web/src/app/features/home/home.page.html
+++ b/web/src/app/features/home/home.page.html
@@ -2,8 +2,8 @@
   <h2>User Last Name: {{ user()?.lastName }}</h2>
 </div>
 
-<p>Hello World</p>
-<p style="font-family: Mada, sans-serif">Hello World (Mada Sans Serif)</p>
-<p style="font-family: Onest, sans-serif">Hello World (Onest Sans Serif)</p>
+<h1>Hello World</h1>
+<h1 style="font-family: Mada, sans-serif">Hello World (Mada Sans Serif)</h1>
+<h1 style="font-family: Onest, sans-serif">Hello World (Onest Sans Serif)</h1>
 
 <button trBtn (click)="logout()">Logout</button>
