--- a/web/src/styles/_fonts.scss
+++ b/web/src/styles/_fonts.scss
@@ -1,7 +1,7 @@
 @font-face {
   font-family: 'Mada';
   src: url('../../public/fonts/mada.ttf') format('truetype');
-  font-weight: normal;
+  font-weight: 100 900;
   font-style: normal;
   font-display: swap;
 }
@@ -9,7 +9,7 @@
 @font-face {
   font-family: 'Onest';
   src: url('../../public/fonts/onest.ttf') format('truetype');
-  font-weight: normal;
+  font-weight: 100 900;
   font-style: normal;
   font-display: swap;
 }
