fix(web): color global styles

--- a/web/src/app/features/home/home.page.html
+++ b/web/src/app/features/home/home.page.html
@@ -5,8 +5,8 @@
 <div class="flex flex-col">
   <h1 class="tr-title-1">Title 1</h1>
   <h2 class="tr-title-2">Title 2</h2>
-  <p class="tr-subtitle">Subtitle</p>
-  <span class="tr-container-title">Container Title</span>
+  <p class="tr-subtitle text-muted">Subtitle</p>
+  <span class="tr-container-title text-muted">Container Title</span>
   <span class="tr-large">Large</span>
   <span class="tr-medium">Medium</span>
   <span class="tr-small">Small</span>
