--- a/web/src/styles/main.scss
+++ b/web/src/styles/main.scss
@@ -1,10 +1,9 @@
 @use 'fonts';
 @use 'colors' as color;
-@use 'tailwind-config';
 @use 'typography';
 
 body {
   font-family: Onest, sans-serif;
   font-size: 16px;
-  color: color.apply_color('foreground', 1);
+  color: color.apply_color('foreground');
 }
