--- a/web/src/app/components/brand/box-logo/box-logo.component.html
+++ b/web/src/app/components/brand/box-logo/box-logo.component.html
@@ -1,6 +1,6 @@
 <svg
-  width="300"
-  height="240"
+  [attr.width]="width()"
+  [attr.height]="height()"
   viewBox="0 0 300 240"
   fill="none"
   xmlns="http://www.w3.org/2000/svg">
