--- a/web/src/app/components/brand/logo/logo.component.html
+++ b/web/src/app/components/brand/logo/logo.component.html
@@ -1,6 +1,6 @@
 <svg
-  width="215"
-  height="72"
+  [attr.width]="width()"
+  [attr.height]="height()"
   viewBox="0 0 215 72"
   fill="none"
   xmlns="http://www.w3.org/2000/svg">
