refactor(web): remove useless lines in tsconfig.json

--- a/web/src/app/features/authentication/login/login.page.html
+++ b/web/src/app/features/authentication/login/login.page.html
@@ -35,7 +35,7 @@
 
     <div class="mt-4 text-center">
       <p class="text-sm text-gray-600">
-        Haven't an account?
+        Don't have an account?
         <a href="/register" class="text-primary hover:underline">Register</a>
       </p>
     </div>
