--- a/web/src/app/features/authentication/login/login.page.html
+++ b/web/src/app/features/authentication/login/login.page.html
@@ -1,7 +1,7 @@
 <div class="flex min-h-screen items-center justify-center bg-secondary">
   <div class="w-full max-w-md bg-white p-8 rounded-[10px] shadow-md">
     <h2 class="tr-title-3 text-center mb-6">Welcome back!</h2>
-    <form class="space-y-6">
+    <form class="space-y-6" (ngSubmit)="onLogin()">
       <div>
         <label for="email" trLabel>Email</label>
         <input
@@ -9,8 +9,7 @@
           type="email"
           trInput
           class="w-full"
-          placeholder="example@email.com"
-        />
+          placeholder="example@email.com" />
       </div>
 
       <div>
@@ -20,17 +19,10 @@
           type="password"
           trInput
           class="w-full"
-          placeholder="••••••••"
-        />
+          placeholder="••••••••" />
       </div>
 
-      <button
-        type="submit"
-        trBtn
-        class="w-full"
-      >
-        Login
-      </button>
+      <button type="submit" trBtn class="w-full">Login</button>
     </form>
 
     <div class="mt-4 text-center">
