--- a/web/src/app/features/layout/main.layout.component.html
+++ b/web/src/app/features/layout/main.layout.component.html
@@ -1,2 +1,19 @@
-<p>main.layout works!</p>
-<router-outlet></router-outlet>
+<div class="flex flex-row p-3">
+  <div class="flex flex-col space-y-2.5">
+    <img
+      ngSrc="icons/triggo_box_logo.svg"
+      alt="Triggo Box Logo"
+      width="200"
+      height="200" />
+    <tr-side-menu-button label="Home" icon="heroHome"></tr-side-menu-button>
+    <tr-side-menu-button
+      label="Integrations"
+      icon="heroLink"></tr-side-menu-button>
+    <tr-side-menu-button
+      label="Automations"
+      icon="heroBolt"></tr-side-menu-button>
+  </div>
+  <div class="mx-3">
+    <router-outlet></router-outlet>
+  </div>
+</div>
