chore(web): remove useless style files

--- a/web/src/app/features/layout/components/side-menu-button/side-menu-button.component.html
+++ b/web/src/app/features/layout/components/side-menu-button/side-menu-button.component.html
@@ -2,6 +2,10 @@
   trBtn
   class="w-[100%] justify-start flex items-center flex-row gap-1.5 hover:bg-accent hover:text-primary px-4 h-11"
   variant="secondary">
-  <ng-icon [name]="icon()" size="1.25rem" strokeWidth="0.11rem" class="mb-0.5"></ng-icon>
+  <ng-icon
+    [name]="icon()"
+    size="1.25rem"
+    strokeWidth="0.11rem"
+    class="mb-0.5"></ng-icon>
   <span class="tr-container-title">{{ label() }}</span>
 </button>
