--- a/web/src/app/features/layout/main.layout.component.html
+++ b/web/src/app/features/layout/main.layout.component.html
@@ -5,13 +5,9 @@
       alt="Triggo Box Logo"
       width="200"
       height="200" />
-    <tr-side-menu-button label="Home" icon="heroHome"></tr-side-menu-button>
-    <tr-side-menu-button
-      label="Integrations"
-      icon="heroLink"></tr-side-menu-button>
-    <tr-side-menu-button
-      label="Automations"
-      icon="heroBolt"></tr-side-menu-button>
+    <tr-side-menu-button label="Home" icon="heroHome" />
+    <tr-side-menu-button label="Integrations" icon="heroLink" />
+    <tr-side-menu-button label="Automations" icon="heroBolt" />
   </div>
   <div class="mx-3">
     <router-outlet></router-outlet>
