feat(web): add profile tab to the side menu

--- a/web/src/app/features/layout/main.layout.component.html
+++ b/web/src/app/features/layout/main.layout.component.html
@@ -4,10 +4,12 @@
       ngSrc="icons/triggo_box_logo.svg"
       alt="Triggo Box Logo"
       width="200"
-      height="200" />
+      height="160"
+      priority />
     <tr-side-menu-button label="Home" icon="heroHome" />
     <tr-side-menu-button label="Integrations" icon="heroLink" />
     <tr-side-menu-button label="Automations" icon="heroBolt" />
+    <tr-side-menu-profile />
   </div>
   <div class="mx-3">
     <router-outlet></router-outlet>
