feat(web): add active button effect

--- a/web/src/app/features/layout/components/side-menu-button/side-menu-button.component.html
+++ b/web/src/app/features/layout/components/side-menu-button/side-menu-button.component.html
@@ -1,6 +1,8 @@
 <button
+  [routerLink]="['/' + path()]"
+  routerLinkActive="active"
   trBtn
-  class="w-[100%] justify-start flex items-center flex-row gap-1.5 hover:bg-accent hover:text-primary px-3 h-11"
+  class="w-[100%] justify-start flex items-center flex-row gap-1.5 hover:bg-accent px-3 h-11 [&.active]:bg-accent [&.active]:text-primary"
   variant="secondary">
   <ng-icon
     [name]="icon()"
