--- a/web/src/app/features/layout/main.layout.component.html
+++ b/web/src/app/features/layout/main.layout.component.html
@@ -1,18 +1,24 @@
-<div class="flex flex-row p-3 h-[100vh]">
-  <div class="flex flex-col space-y-2.5 max-h-screen overflow-y-auto">
+<div class="flex flex-row p-3 h-[100vh] space-x-6">
+  <div class="flex flex-col space-y-3 max-h-screen overflow-y-auto">
     <img
       ngSrc="icons/triggo_box_logo.svg"
       alt="Triggo Box Logo"
-      width="200"
-      height="160"
+      width="210"
+      height="170"
       priority />
-    <tr-side-menu-button label="Home" icon="heroHome" />
-    <tr-side-menu-button label="Integrations" icon="heroLink" />
-    <tr-side-menu-button label="Automations" icon="heroBolt" />
+    <tr-side-menu-button label="Home" icon="heroHome" path="home" />
+    <tr-side-menu-button
+      label="Integrations"
+      icon="heroLink"
+      path="integrations" />
+    <tr-side-menu-button
+      label="Automations"
+      icon="heroBolt"
+      path="automations" />
     <div class="flex-grow bg-secondary rounded-md"></div>
     <tr-side-menu-profile />
   </div>
-  <div class="mx-3">
+  <div class="py-10">
     <router-outlet></router-outlet>
   </div>
 </div>
