feat(web): add static register page

--- a/web/src/app/features/authentication/login/login.page.html
+++ b/web/src/app/features/authentication/login/login.page.html
@@ -28,7 +28,9 @@
     <div class="mt-4 text-center">
       <p class="text-sm text-gray-600">
         Don't have an account?
-        <a href="/register" class="text-primary hover:underline">Register</a>
+        <a routerLink="/register" class="text-primary hover:underline"
+          >Register</a
+        >
       </p>
     </div>
   </div>
