--- a/web/src/app/features/authentication/register/register.page.html
+++ b/web/src/app/features/authentication/register/register.page.html
@@ -11,6 +11,12 @@
           class="w-full"
           placeholder="John"
           [formControl]="registerForm.controls.firstName" />
+        @if (!registerForm.controls.firstName.untouched &&
+        registerForm.controls.firstName.invalid) {
+        <div class="h-1">
+          <small class="text-destructive">First name is required</small>
+        </div>
+        }
       </div>
 
       <div>
@@ -22,6 +28,12 @@
           class="w-full"
           placeholder="Doe"
           [formControl]="registerForm.controls.lastName" />
+        @if (!registerForm.controls.lastName.untouched &&
+        registerForm.controls.lastName.invalid) {
+        <div class="h-1">
+          <small class="text-destructive">Last name is required</small>
+        </div>
+        }
       </div>
 
       <div>
@@ -33,6 +45,12 @@
           class="w-full"
           placeholder="example@email.com"
           [formControl]="registerForm.controls.email" />
+        @if (!registerForm.controls.email.untouched &&
+        registerForm.controls.email.invalid) {
+        <div class="h-1">
+          <small class="text-destructive">{{ getEmailErrorMessage() }}</small>
+        </div>
+        }
       </div>
 
       <div>
@@ -44,6 +62,14 @@
           class="w-full"
           placeholder="••••••••"
           [formControl]="registerForm.controls.password" />
+        @if (!registerForm.controls.password.untouched &&
+        registerForm.controls.password.invalid) {
+        <div class="h-1">
+          <small class="text-destructive"
+            >{{ getPasswordErrorMessage() }}</small
+          >
+        </div>
+        }
       </div>
 
       <div>
@@ -55,6 +81,12 @@
           class="w-full"
           placeholder="••••••••"
           [formControl]="registerForm.controls.confirmPassword" />
+        @if (!registerForm.controls.confirmPassword.untouched &&
+        registerForm.controls.confirmPassword.invalid) {
+        <div class="h-1">
+          <small class="text-destructive">Passwords need to match</small>
+        </div>
+        }
       </div>
 
       <button type="submit" trBtn class="w-full">Register</button>
