feat(web): add password input component

--- a/web/src/app/features/authentication/register/register.page.html
+++ b/web/src/app/features/authentication/register/register.page.html
@@ -1,97 +1,7 @@
 <div class="flex min-h-screen items-center justify-center bg-secondary">
   <div class="w-full max-w-md bg-white p-8 rounded-[10px] shadow-md">
     <h2 class="tr-title-3 text-center mb-6">Create Your Account</h2>
-    <form class="space-y-6" (ngSubmit)="onSubmit()" [formGroup]="registerForm">
-      <div>
-        <label for="firstName" trLabel>First Name</label>
-        <input
-          id="firstName"
-          type="text"
-          trInput
-          class="w-full"
-          placeholder="John"
-          [formControl]="registerForm.controls.firstName" />
-        @if (!registerForm.controls.firstName.untouched &&
-        registerForm.controls.firstName.invalid) {
-        <div class="h-1">
-          <small class="text-destructive">First name is required</small>
-        </div>
-        }
-      </div>
-
-      <div>
-        <label for="lastName" trLabel>Last Name</label>
-        <input
-          id="lastName"
-          type="text"
-          trInput
-          class="w-full"
-          placeholder="Doe"
-          [formControl]="registerForm.controls.lastName" />
-        @if (!registerForm.controls.lastName.untouched &&
-        registerForm.controls.lastName.invalid) {
-        <div class="h-1">
-          <small class="text-destructive">Last name is required</small>
-        </div>
-        }
-      </div>
-
-      <div>
-        <label for="email" trLabel>Email</label>
-        <input
-          id="email"
-          type="email"
-          trInput
-          class="w-full"
-          placeholder="example@email.com"
-          [formControl]="registerForm.controls.email" />
-        @if (!registerForm.controls.email.untouched &&
-        registerForm.controls.email.invalid) {
-        <div class="h-1">
-          <small class="text-destructive">{{ getEmailErrorMessage() }}</small>
-        </div>
-        }
-      </div>
-
-      <div>
-        <label for="password" trLabel>Password</label>
-        <input
-          id="password"
-          type="password"
-          trInput
-          class="w-full"
-          placeholder="••••••••"
-          [formControl]="registerForm.controls.password" />
-        @if (!registerForm.controls.password.untouched &&
-        registerForm.controls.password.invalid) {
-        <div class="h-1">
-          <small class="text-destructive"
-            >{{ getPasswordErrorMessage() }}</small
-          >
-        </div>
-        }
-      </div>
-
-      <div>
-        <label for="confirmPassword" trLabel>Confirm Password</label>
-        <input
-          id="confirmPassword"
-          type="password"
-          trInput
-          class="w-full"
-          placeholder="••••••••"
-          [formControl]="registerForm.controls.confirmPassword" />
-        @if (!registerForm.controls.confirmPassword.untouched &&
-        registerForm.controls.confirmPassword.invalid) {
-        <div class="h-1">
-          <small class="text-destructive">Passwords need to match</small>
-        </div>
-        }
-      </div>
-
-      <button type="submit" trBtn class="w-full">Register</button>
-    </form>
-
+    <tr-register-form />
     <div class="mt-4 text-center">
       <p class="text-sm text-gray-600">
         Already have an account?
