feat(web): add loading spinner for the register submission

--- a/web/src/app/features/authentication/register/components/register-form/register-form.component.html
+++ b/web/src/app/features/authentication/register/components/register-form/register-form.component.html
@@ -69,5 +69,11 @@
       errorMessage="Passwords need to match" />
   </div>
 
-  <button type="submit" trBtn class="w-full">Register</button>
+  <button type="submit" trBtn class="w-full" [disabled]="registerLoading()">
+    @if (registerLoading()) {
+      <tr-spinner />
+    } @else {
+      Register
+    }
+  </button>
 </form>
