feat(web): add login page loading after request

--- a/web/src/app/features/authentication/login/components/login-form/login-form.component.html
+++ b/web/src/app/features/authentication/login/components/login-form/login-form.component.html
@@ -20,5 +20,11 @@
       [formControl]="loginForm.controls.password"
       errorMessage="" />
   </div>
-  <button type="submit" trBtn class="w-full">Login</button>
+  <button type="submit" trBtn class="w-full" [disabled]="loginLoading()">
+    @if (loginLoading()) {
+      <tr-spinner />
+    } @else {
+      Login
+    }
+  </button>
 </form>
