--- a/web/src/app/features/layout/main.layout.component.html
+++ b/web/src/app/features/layout/main.layout.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-row p-3 h-[100vh] space-x-6">
+<div class="flex flex-row p-3 h-[100vh]">
   <div class="flex flex-col space-y-3 max-h-screen overflow-y-auto">
     <img
       ngSrc="icons/triggo_box_logo.svg"
@@ -18,7 +18,7 @@
     <div class="flex-grow bg-secondary rounded-md"></div>
     <tr-side-menu-profile />
   </div>
-  <div class="py-10">
+  <div class="pt-10 px-6 w-full">
     <router-outlet></router-outlet>
   </div>
 </div>
