feat(web): add dialog component

--- a/web/src/app/features/integrations/integrations.page.html
+++ b/web/src/app/features/integrations/integrations.page.html
@@ -1,7 +1,7 @@
 <div class="flex flex-col min-h-full space-y-3">
   <div class="flex flex-row justify-between items-center w-full">
     <h1 class="tr-title-1">Integrations</h1>
-    <button trBtn>Add Integration</button>
+    <tr-integration-add />
   </div>
 
   <div class="flex-grow bg-secondary rounded-md overflow-auto">
