--- a/web/src/app/features/integrations/components/integration-add/integration-add.component.html
+++ b/web/src/app/features/integrations/components/integration-add/integration-add.component.html
@@ -1,10 +1,10 @@
 <tr-dialog>
-  <button id="edit-profile" brnDialogTrigger trBtn>Add Integration</button>
+  <button brnDialogTrigger trBtn>Add Integration</button>
   <tr-dialog-content class="sm:max-w-[725px]" *brnDialogContent="let ctx">
     <tr-dialog-header>
       <h3 trDialogTitle>Add Integration</h3>
       <p trDialogDescription>
-        Make changes to your profile here. Click save when you're done.
+        Select the integration you want to add to your account.
       </p>
     </tr-dialog-header>
     <div class="py-4 grid gap-4">
@@ -17,8 +17,5 @@
         <input trInput id="username" value="@peduarte" class="col-span-3" />
       </div>
     </div>
-    <tr-dialog-footer>
-      <button trBtn type="submit">Save changes</button>
-    </tr-dialog-footer>
   </tr-dialog-content>
 </tr-dialog>
