--- a/web/src/app/features/integrations/components/integration-available-card/integration-available-card.component.html
+++ b/web/src/app/features/integrations/components/integration-available-card/integration-available-card.component.html
@@ -1,5 +1,5 @@
 <div
-  class="rounded-md shadow-sm p-5 max-w-[30%] hover:cursor-pointer hover:bg-accent border border-gray-300">
+  class="rounded-md shadow-sm p-5 hover:cursor-pointer hover:bg-accent border border-gray-300">
   <div class="flex flex-col items-center space-y-1">
     <img
       [ngSrc]="props().logoAssetName"
