--- a/web/src/app/features/layout/main.layout.component.html
+++ b/web/src/app/features/layout/main.layout.component.html
@@ -18,7 +18,7 @@
     <div class="flex-grow bg-secondary rounded-md"></div>
     <tr-side-menu-profile />
   </div>
-  <div class="pt-10 px-6 w-full">
+  <div class="pt-10 pb-14 px-6 w-full">
     <router-outlet></router-outlet>
   </div>
 </div>
