--- a/web/src/app/features/integrations/components/integration-linked-discord/integration-linked-discord.component.html
+++ b/web/src/app/features/integrations/components/integration-linked-discord/integration-linked-discord.component.html
@@ -10,17 +10,14 @@
       ngSrc="icons/discord_logo.svg"
       alt="Discord Logo"
       class="absolute -bottom-2 left-8 rounded-full"
-      [width]="20"
-      [height]="20" />
+      [width]="25"
+      [height]="25" />
   </div>
-  <div class="flex flex-col ml-3">
-    <span class="tr-large">{{ props().username }}</span>
-    <span class="text-gray-500 text-sm">{{ props().email }}</span>
-    <div class="space-x-1">
-      @for (flag of props().flags; track flag) {
-        <a trBadge>{{ flag }}</a>
-      }
-    </div>
+  <div class="flex flex-col ml-4">
+    <h1 class="tr-large">{{ props().username }}</h1>
+    <span class="text-gray-500 text-sm"
+      >{{ props().username }} - {{ props().email }}</span
+    >
   </div>
-  <button trBtn variant="secondary" class="ml-auto">Manage guild</button>
+  <button trBtn variant="outline" class="ml-auto">Manage guilds</button>
 </div>
