fix(web): discord oauth2 close window function
The function to kill the window was updated because, if the tab have been opened by a human, we can't close the tab. So we redirect him to /

--- a/web/src/app/features/oauth2/discord/discord.oauth2.page.html
+++ b/web/src/app/features/oauth2/discord/discord.oauth2.page.html
@@ -31,6 +31,9 @@
         contact support.
       </p>
     </div>
+      <button (click)="closeWindow()" trBtn class="w-full mt-4 py-3 px-4">
+        Close Window
+      </button>
     } @if (!error() && !loading()) {
     <div class="space-y-4">
       <div
