--- a/web/src/app/features/oauth2/discord/discord.oauth2.page.html
+++ b/web/src/app/features/oauth2/discord/discord.oauth2.page.html
@@ -31,10 +31,10 @@
         contact support.
       </p>
     </div>
-      <button (click)="handleCloseWindow()" trBtn class="w-full mt-4 py-3 px-4">
-        Close Window
-      </button>
-    } @if (!error() && !loading()) {
+    <button (click)="handleCloseWindow()" trBtn class="w-full mt-4 py-3 px-4">
+      Close Window
+    </button>
+    } @if (!error() && !loading() && success()) {
     <div class="space-y-4">
       <div
         class="bg-green-50 border border-green-200 rounded-lg p-4 text-center">
