feat(web): add search bar on the integration page

--- a/web/src/app/features/integrations/integrations.page.html
+++ b/web/src/app/features/integrations/integrations.page.html
@@ -4,7 +4,10 @@
     <tr-integration-add-dialog />
   </div>
 
-  <tr-pagination [totalPages]="21"/>
+  <div class="flex justify-between">
+    <input trInput placeholder="Search for an integration"/>
+    <tr-pagination [totalPages]="21"/>
+  </div>
   <div class="flex-grow bg-secondary rounded-md overflow-auto">
     <div class="p-4 space-y-4 flex-col flex">
       @for (integration of integrations | async; track integration.id) {
