--- a/web/src/app/features/integrations/integrations.page.html
+++ b/web/src/app/features/integrations/integrations.page.html
@@ -5,14 +5,15 @@
   </div>
 
   <div class="flex justify-between">
-    <input trInput placeholder="Search for an integration"/>
-    <tr-pagination [totalPages]="21"/>
+    <input trInput placeholder="Search for an integration" />
+    <tr-pagination [totalPages]="21" />
   </div>
   <div class="flex-grow bg-secondary rounded-md overflow-auto">
     <div class="p-4 space-y-4 flex-col flex">
-      @for (integration of integrations | async; track integration.id) {
+      @if (integrations | async; as page) { @for (integration of page.data;
+      track integration.id) {
       <tr-integration-linked-card [integration]="integration" />
-      }
+      } }
     </div>
   </div>
 </div>
