--- a/web/src/app/features/oauth2/discord/discord.oauth2.page.html
+++ b/web/src/app/features/oauth2/discord/discord.oauth2.page.html
@@ -15,7 +15,7 @@
         <tr-spinner class="w-12 h-12 text-primary" />
         <p class="text-muted">Connecting to Discord...</p>
       </div>
-    } @if (error()) {
+    } @if (!success()) {
     <div class="bg-red-50 border border-red-200 rounded-lg p-4 text-center">
       <ng-icon
         name="heroExclamationTriangle"
@@ -33,7 +33,7 @@
     <button (click)="handleCloseWindow()" trBtn class="w-full mt-4 py-3 px-4">
       Close Window
     </button>
-  } @if (!error() && !loading() && success()) {
+  } @if (!loading() && success()) {
     <div class="space-y-4">
       <div
         class="bg-green-50 border border-green-200 rounded-lg p-4 text-center">
