feat(web): add skeleton for loading

--- a/web/src/app/features/integrations/components/integration-linked-discord/integration-linked-discord.component.html
+++ b/web/src/app/features/integrations/components/integration-linked-discord/integration-linked-discord.component.html
@@ -14,7 +14,7 @@
       [height]="25" />
   </div>
   <div class="flex flex-col ml-4">
-    <h1 class="tr-large">{{ props().username }}</h1>
+    <h1 class="tr-large">{{ props().displayName }}</h1>
     <span class="text-gray-500 text-sm"
       >{{ props().username }} - {{ props().email }}</span
     >
